--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
+    "method-override": "^3.0.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.2.0",
     "nodemon": "^3.1.0",
     "uuid": "^9.0.1"
